Added image portion for new project added

--- a/app/views/partials/_column_two.html.erb
+++ b/app/views/partials/_column_two.html.erb
@@ -13,33 +13,56 @@
 				The web app is hosted <a href=<%= ap[5] %>>here</a>.
 			<% end %>
 		<% if ap[3] == "desktop" %>
-			<div class="carouselContainer"> 
-				<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-					<div class="carousel-inner">
-						<div class="carousel-item active">
-							<%= image_tag("textEditorProject/delete10.png", :class => "carouselImage") %>
-							<%= image_tag("textEditorProject/delete09.png", :class => "carouselImage") %>
-							<%= image_tag("textEditorProject/delete03.png", :class => "carouselImage") %>
-						</div>
-						<div class="carousel-item">
-							<%= image_tag("textEditorProject/delete04.png", :class => "carouselImage") %>
+			<% if ap[1] == "Text Editor" %>
+				<div class="carouselContainer"> 
+					<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+						<div class="carousel-inner">
+							<div class="carousel-item active">
+								<%= image_tag("textEditorProject/delete10.png", :class => "carouselImage") %>
+								<%= image_tag("textEditorProject/delete09.png", :class => "carouselImage") %>
+								<%= image_tag("textEditorProject/delete03.png", :class => "carouselImage") %>
+							</div>
+							<div class="carousel-item">
+								<%= image_tag("textEditorProject/delete04.png", :class => "carouselImage") %>
 							<%= image_tag("textEditorProject/delete05.png", :class => "carouselImage") %>
+							</div>
+							<div class="carousel-item">
+								<%= image_tag("textEditorProject/delete01.png", :class => "carouselImage") %>
+								<%= image_tag("textEditorProject/delete02.png", :class => "carouselImage") %>
+							</div>
 						</div>
-						<div class="carousel-item">
-							<%= image_tag("textEditorProject/delete01.png", :class => "carouselImage") %>
-							<%= image_tag("textEditorProject/delete02.png", :class => "carouselImage") %>
-						</div>
+						<a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+							<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+							<span class="sr-only">Previous</span>
+						</a>
+						<a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+							<span class="carousel-control-next-icon" aria-hidden="true"></span>
+							<span class="sr-only">Next</span>
+						</a>
 					</div>
-					<a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-						<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-						<span class="sr-only">Previous</span>
-					</a>
-					<a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-						<span class="carousel-control-next-icon" aria-hidden="true"></span>
-						<span class="sr-only">Next</span>
-					</a>
 				</div>
-			</div>
+			<% end %>
+			<% if ap[1] == "Basic and Scientific Calculator" %>
+				<div class="carouselContainer"> 
+					<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+						<div class="carousel-inner">
+							<div class="carousel-item active">
+								<%= image_tag("scientificCalcProject/basicCalc01.png", :class => "carouselImage") %>
+								<%= image_tag("scientificCalcProject/basicCalc02.png", :class => "carouselImage") %>
+								<%= image_tag("scientificCalcProject/basicCalc03.png", :class => "carouselImage") %>
+							</div>
+						</div>
+						<a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+							<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+							<span class="sr-only">Previous</span>
+						</a>
+						<a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+							<span class="carousel-control-next-icon" aria-hidden="true"></span>
+							<span class="sr-only">Next</span>
+						</a>
+					</div>
+				</div>
+			<% end %>
 		<% end %>
 	</p>
 
