Added new self-portrait

--- a/app/views/partials/_column_two.html.erb
+++ b/app/views/partials/_column_two.html.erb
@@ -2,9 +2,10 @@
 <!--% @all_projects.each do |ap| %-->
 <% projects.each do |ap| %>
 
-	<p style="text-align: center; font-family: cursive; padding-bottom: 0px; margin-bottom: 0px;">
-		<b><h4 style="font-family: cursive;">&#8226; <%= ap[1] %> (<%= ap[3] %> app) &#8226;</h4></b>
-	</p>
+<!--% if (ap.nil? == false) %-->
+    <p style="text-align: center; font-family: cursive; padding-bottom: 0px; margin-bottom: 0px;">
+        <b><h4 style="font-family: cursive;">&#8226; <%= ap[1] %> (<%= ap[3] %> app) &#8226;</h4></b>
+    </p>
 
 	<p style="text-align: left; padding-top: 0px; margin-top: 0px;">
 		<%= ap[2] %> 
@@ -144,5 +145,6 @@
 	</p>
 	<br><br>
 				
+<!--% end %-->
 <% end %>
 
