Updated profile picture

--- a/app/views/basic/about.html.erb
+++ b/app/views/basic/about.html.erb
@@ -11,7 +11,8 @@
 
 	<div class="row" id="sub-intro">
 		<div class="col-sm-3" style="padding-top: 23px; margin-top: 23px;">
-			<img width="200px" height="auto;" src="https://raw.githubusercontent.com/kkuivenhoven/AboutKendra/master/fullsizeoutput_1e8b.jpeg" alt="https://raw.githubusercontent.com/kkuivenhoven/AboutKendra/master/fullsizeoutput_1e8b.jpeg" class="img-thumbnail" style=""></img>
+        <!-- <img width="200px" height="auto;" src="https://raw.githubusercontent.com/kkuivenhoven/AboutKendra/master/fullsizeoutput_1e8b.jpeg" alt="https://raw.githubusercontent.com/kkuivenhoven/AboutKendra/master/fullsizeoutput_1e8b.jpeg" class="img-thumbnail" style=""></img> -->
+			<img width="200px" height="auto;" src="https://raw.githubusercontent.com/kkuivenhoven/AboutKendra/master/IMG_4115.jpg" alt="https://raw.githubusercontent.com/kkuivenhoven/AboutKendra/master/IMG_4115.jpg" class="img-thumbnail" style=""></img>
 		</div>
 		<div class="col-sm-5" class="center-section" style="padding-top: 20px; margin-top: 20px;">
 		<!--div class="col-sm-9" class="center-section" style="padding-top: 20px; margin-top: 20px;"-->
