Recompiled assets; altered carousel for Paint Program

--- a/app/views/partials/_column_two.html.erb
+++ b/app/views/partials/_column_two.html.erb
@@ -21,10 +21,12 @@
 							<div class="carousel-item active">
 								<%= image_tag("basedPaintProgram/paintProgram_01.png", :class => "carouselImage") %>
 								<%= image_tag("basedPaintProgram/paintProgram_02.png", :class => "carouselImage") %>
-								<%= image_tag("basedPaintProgram/paintProgram_03.png", :class => "carouselImage") %>
 							</div>
 							<div class="carousel-item">
+								<%= image_tag("basedPaintProgram/paintProgram_03.png", :class => "carouselImage") %>
 								<%= image_tag("basedPaintProgram/paintProgram_04.png", :class => "carouselImage") %>
+							</div>
+							<div class="carousel-item">
                                 <%= image_tag("basedPaintProgram/paintProgram_05.png", :class => "carouselImage") %>
 							</div>
 						</div>
@@ -50,7 +52,7 @@
 							</div>
 							<div class="carousel-item">
 								<%= image_tag("textEditorProject/delete04.png", :class => "carouselImage") %>
-							<%= image_tag("textEditorProject/delete05.png", :class => "carouselImage") %>
+                                <%= image_tag("textEditorProject/delete05.png", :class => "carouselImage") %>
 							</div>
 							<div class="carousel-item">
 								<%= image_tag("textEditorProject/delete01.png", :class => "carouselImage") %>
