Fixed <% end %> tag that needed to be commented out

--- a/app/views/partials/_column_two.html.erb
+++ b/app/views/partials/_column_two.html.erb
@@ -39,8 +39,8 @@
 							<span class="sr-only">Next</span>
 						</a>
 					</div>
-				</div-->
-            <% end %>
+				</div>
+             end %-->
 			<% if ap[1] == "Text Editor" %>
 				<div class="carouselContainer"> 
 					<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
